non_executable_reasons_record_from_random_10k/1245.txt
3.5
An error occurred while executing the following cell:
------------------
for num in l:
    print num
------------------

[0;36m  File [0;32m"<ipython-input-3-ccdfd25f792f>"[0;36m, line [0;32m2[0m
[0;31m    print num[0m
[0m            ^[0m
[0;31mSyntaxError[0m[0;31m:[0m Missing parentheses in call to 'print'

SyntaxError: Missing parentheses in call to 'print' (<ipython-input-3-ccdfd25f792f>, line 2)

Executability                            : False
